// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionVotes should render loading state 1`] = `
<div>
  <div
    class="flex justify-between items-center py-6 border-t border-dashed border-theme-secondary-300 dark:border-theme-secondary-800"
    data-testid="TransactionVotes__skeleton"
  >
    <div
      class="flex flex-col space-y-2"
    >
      <span>
        <span
          class="react-loading-skeleton css-1vmnjpn-skeletonStyles-Skeleton"
          style="width: 25%; height: 14px;"
        >
          ‌
        </span>
      </span>
      <span>
        <span
          class="react-loading-skeleton css-1vmnjpn-skeletonStyles-Skeleton"
          style="width: 75%; height: 16px;"
        >
          ‌
        </span>
      </span>
    </div>
    <span>
      <span
        class="react-loading-skeleton mb-1 css-1vmnjpn-skeletonStyles-Skeleton"
        style="width: 44px; height: 44px; border-radius: 50%;"
      >
        ‌
      </span>
    </span>
  </div>
</div>
`;

exports[`TransactionVotes should render with unvotes 1`] = `
<div>
  <div
    class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 hqOyLp undefined no-ligatures"
    data-testid="TransactionDetail"
  >
    <div
      class="flex-1 space-y-2"
    >
      <div
        class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
      >
        Transaction Type
      </div>
      <div
        class="font-semibold"
      >
        Unvote
      </div>
    </div>
    <div
      class="Circle-uw7h4j-0 JkqUV border-theme-text"
    >
      <div
        class="sc-bdfBwQ bOxyah"
        height="21"
        width="21"
      >
        <svg>
          unvote.svg
        </svg>
      </div>
    </div>
  </div>
  <div
    class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 hqOyLp undefined no-ligatures"
    data-testid="TransactionDetail"
  >
    <div
      class="flex-1 space-y-2"
    >
      <div
        class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
      >
        Unvotes (1)
      </div>
      <div
        class="font-semibold"
      >
        <div
          class="-my-2"
        >
          <div
            class="border-b border-dashed last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800"
          >
            <div
              class="flex items-center py-4 space-x-4"
            >
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 keFjxD"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full"
                >
                  <img
                    alt="test-address"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(3, 169, 244)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/><circle r=\\"40\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(33, 150, 243)\\"/><circle r=\\"35\\" cx=\\"20\\" cy=\\"30\\" fill=\\"rgb(255, 87, 34)\\"/></svg>"
                    title="test-address"
                  />
                </div>
              </div>
              <div
                class="inline-flex items-center no-ligatures"
              >
                <span
                  class="max-w-24 flex-auto truncate mr-2 font-semibold text-base text-theme-text"
                  data-testid="address__wallet-name"
                >
                  <span
                    class="TruncateEnd__Wrapper-sc-1w1nvb9-0"
                    data-testid="TruncateEnd"
                  >
                    test-username
                  </span>
                </span>
                <span
                  class="TruncateMiddle__Wrapper-sc-3j3e79-0 text-theme-secondary-500 dark:text-theme-secondary-700 truncate font-semibold text-base"
                  data-testid="address__wallet-address"
                >
                  test-address
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionVotes should render with votes 1`] = `
<div>
  <div
    class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 hqOyLp undefined no-ligatures"
    data-testid="TransactionDetail"
  >
    <div
      class="flex-1 space-y-2"
    >
      <div
        class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
      >
        Transaction Type
      </div>
      <div
        class="font-semibold"
      >
        Vote
      </div>
    </div>
    <div
      class="Circle-uw7h4j-0 JkqUV border-theme-text"
    >
      <div
        class="sc-bdfBwQ bOxyah"
        height="21"
        width="21"
      >
        <svg>
          vote.svg
        </svg>
      </div>
    </div>
  </div>
  <div
    class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 hqOyLp undefined no-ligatures"
    data-testid="TransactionDetail"
  >
    <div
      class="flex-1 space-y-2"
    >
      <div
        class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
      >
        Votes (1)
      </div>
      <div
        class="font-semibold"
      >
        <div
          class="-my-2"
        >
          <div
            class="border-b border-dashed last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800"
          >
            <div
              class="flex items-center py-4 space-x-4"
            >
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 keFjxD"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full"
                >
                  <img
                    alt="test-address"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(3, 169, 244)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/><circle r=\\"40\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(33, 150, 243)\\"/><circle r=\\"35\\" cx=\\"20\\" cy=\\"30\\" fill=\\"rgb(255, 87, 34)\\"/></svg>"
                    title="test-address"
                  />
                </div>
              </div>
              <div
                class="inline-flex items-center no-ligatures"
              >
                <span
                  class="max-w-24 flex-auto truncate mr-2 font-semibold text-base text-theme-text"
                  data-testid="address__wallet-name"
                >
                  <span
                    class="TruncateEnd__Wrapper-sc-1w1nvb9-0"
                    data-testid="TruncateEnd"
                  >
                    test-username
                  </span>
                </span>
                <span
                  class="TruncateMiddle__Wrapper-sc-3j3e79-0 text-theme-secondary-500 dark:text-theme-secondary-700 truncate font-semibold text-base"
                  data-testid="address__wallet-address"
                >
                  test-address
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionVotes should render with votes and unvotes 1`] = `
<div>
  <div
    class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 hqOyLp undefined no-ligatures"
    data-testid="TransactionDetail"
  >
    <div
      class="flex-1 space-y-2"
    >
      <div
        class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
      >
        Transaction Type
      </div>
      <div
        class="font-semibold"
      >
        Vote / Unvote
      </div>
    </div>
    <div
      class="Circle-uw7h4j-0 JkqUV border-theme-text"
    >
      <div
        class="sc-bdfBwQ bOxyah"
        height="21"
        width="21"
      >
        <svg>
          vote-combination.svg
        </svg>
      </div>
    </div>
  </div>
  <div
    class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 hqOyLp undefined no-ligatures"
    data-testid="TransactionDetail"
  >
    <div
      class="flex-1 space-y-2"
    >
      <div
        class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
      >
        Votes (1)
      </div>
      <div
        class="font-semibold"
      >
        <div
          class="-my-2"
        >
          <div
            class="border-b border-dashed last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800"
          >
            <div
              class="flex items-center py-4 space-x-4"
            >
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 keFjxD"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full"
                >
                  <img
                    alt="test-address"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(3, 169, 244)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/><circle r=\\"40\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(33, 150, 243)\\"/><circle r=\\"35\\" cx=\\"20\\" cy=\\"30\\" fill=\\"rgb(255, 87, 34)\\"/></svg>"
                    title="test-address"
                  />
                </div>
              </div>
              <div
                class="inline-flex items-center no-ligatures"
              >
                <span
                  class="max-w-24 flex-auto truncate mr-2 font-semibold text-base text-theme-text"
                  data-testid="address__wallet-name"
                >
                  <span
                    class="TruncateEnd__Wrapper-sc-1w1nvb9-0"
                    data-testid="TruncateEnd"
                  >
                    test-username
                  </span>
                </span>
                <span
                  class="TruncateMiddle__Wrapper-sc-3j3e79-0 text-theme-secondary-500 dark:text-theme-secondary-700 truncate font-semibold text-base"
                  data-testid="address__wallet-address"
                >
                  test-address
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 hqOyLp undefined no-ligatures"
    data-testid="TransactionDetail"
  >
    <div
      class="flex-1 space-y-2"
    >
      <div
        class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
      >
        Unvotes (1)
      </div>
      <div
        class="font-semibold"
      >
        <div
          class="-my-2"
        >
          <div
            class="border-b border-dashed last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800"
          >
            <div
              class="flex items-center py-4 space-x-4"
            >
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 keFjxD"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full"
                >
                  <img
                    alt="test-address"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(3, 169, 244)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/><circle r=\\"40\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(33, 150, 243)\\"/><circle r=\\"35\\" cx=\\"20\\" cy=\\"30\\" fill=\\"rgb(255, 87, 34)\\"/></svg>"
                    title="test-address"
                  />
                </div>
              </div>
              <div
                class="inline-flex items-center no-ligatures"
              >
                <span
                  class="max-w-24 flex-auto truncate mr-2 font-semibold text-base text-theme-text"
                  data-testid="address__wallet-name"
                >
                  <span
                    class="TruncateEnd__Wrapper-sc-1w1nvb9-0"
                    data-testid="TruncateEnd"
                  >
                    test-username
                  </span>
                </span>
                <span
                  class="TruncateMiddle__Wrapper-sc-3j3e79-0 text-theme-secondary-500 dark:text-theme-secondary-700 truncate font-semibold text-base"
                  data-testid="address__wallet-address"
                >
                  test-address
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
